test/deploy/z-pr-1-service-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: pr-1-service-a
  namespace: default
  labels:
    app: pr-1-service-a
    isol8.io/watch: "true"
  annotations:
    isol8.io/route-from: service-a
    isol8.io/route-from-namespace: default
    isol8.io/route-on: pr-1
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: pr-1-service-a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pr-1-service-a
  namespace: default
  labels:
    app: pr-1-service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pr-1-service-a
  template:
    metadata:
      labels:
        app: pr-1-service-a
    spec:
      containers:
      - name: pr-1-service-a
        image: registry.k3d.local:5001/basic-service:latest
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 8080
        env:
        - name: SERVICE_NAME
          value: "pr-1-service-a"
        - name: PATH_BASE
          value: "service-a"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pr-1-service-a
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/ingress-gateway
  http:
  - match:
    - uri:
        prefix: /service-a
      headers:
        kubernetes-route-as:
          exact: pr-1
    route:
    - destination:
        host: pr-1-service-a
        port:
          number: 80
